# funding-bot

./: .gitignore  README.md  _check_trades.py  adaptive_exit.py  aeps_aggressive.json  aeps_base.json  aeps_conservative.json  aeps_high_energy.json  api.py  binance_trader.py  cash_carry_calc.py  chart_pixel.html  check_near_entry.py  check_symbols.py  config.py  dashboard.html  dashboard.html.bak  db.py  docker-compose.yml  init_timescaledb.sh  install_service.sh  mfe_bimodality_101trades.html  paper.tex  peek_ws.py  query.py  recorder.py  report.html  shannon_exit.py  strategy.py  telegram_bot.py  test_live_trade.py  test_sizing.py  test_trade_flow.py  trading_config.json
bimodality_charts/: generate_mfe_chart.py  mfe_bimodality.html  trade_paths_base (8).json
caddy/: Caddyfile
data/: pwin_surface.json
docs/: API.md  bot_paper.tex
liquidation_heatmap/: __init__.py  cache.py  config.py  engine.py  renderer.py  requirements.txt  server.py
mcp-binance-claude/: .gitignore  README.md  pyproject.toml  test_binance_ranking.py  test_binance_scrape.py  test_consistency.py  test_copytrading_client.py  test_direct_fetch.py  test_query_params.py  test_scan_positions.py
mcp-binance-claude/src/psi_jam_mcp/: analysis.py  asymmetry.py  basis_engine.py  basis_scanner.py  basis_trader.py  binance_client.py  carry_detector.py  context.py  copytrading_client.py  futures_trader.py  ghost_flow.py  l2_store.py  oi_chart.py  scanner.py  server.py  spot_client.py  strategy_guard.py  striker_strategy.py  technical_analysis.py
migrations/: 001_schema.sql  003_new_streams.sql  (+3 more)
(+13 files in other folders)
