[project]
name = "psi-jam-mcp"
version = "0.1.0"
description = "MCP server for Ψ-jam framework: real-time L1/L2 market data and Langevin analysis tools"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "plotly>=5.18.0",
    "playwright>=1.40.0",
]

[project.scripts]
psi-jam-mcp = "psi_jam_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
